devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber-pscale
spec:
  replicas: 4
  selector:
    matchLabels:
      app: fiber-pscale
  template:
    metadata:
      labels:
        app: fiber-pscale
    spec:
      containers:
        - name: fiber-pscale
          image: makefeelbetter/fiber-pscale:latest
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: fiber-pscale-env
            mountPath: "/app/app.env"
            subPath: "app.env"
      volumes:
      - name: fiber-pscale-env
        configMap:
          name: env
