devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiber-pscale-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  labels:
    app: fiber-pscale
spec:
  rules:
  - host: fiber-pscale.bocahdesa.com
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: fiber-pscale-service
            port:
              number: 3000
  tls:
  - hosts:
    - fiber-pscale.bocahdesa.com
    secretName: fiber-pscale.bocahdesa.com-tls
